--- a/src/components/Player/index.scss
+++ b/src/components/Player/index.scss
@@ -19,7 +19,7 @@
         border-radius: 5px;
       }
       &-played {
-        background-image: linear-gradient(-90deg,#fff,#fff)!important;
+        background-image: #ffffff!important;
       }
       &-btn {
         top: -3px;
