--- a/src/components/Vcomment/index.scss
+++ b/src/components/Vcomment/index.scss
@@ -1,4 +1,5 @@
 @import '~antd/dist/antd.css';
+@import 'emoji-mart/css/emoji-mart.css';
 .vcomt{
   &-wrapper{
     display: block;
@@ -29,6 +30,7 @@
       &-micro-btn{
         margin-left: 15px;
         font-size: 20px;
+        display: inline;
       }
     }
   }
@@ -93,4 +95,7 @@
   background-color: rebeccapurple;
   width: 15px;
   height: 15px;
+}
+.emoji-mart-preview{
+  display: none;
 }
