feat: now danmuku is avaliable

--- a/src/components/VideoPlayer/index.module.scss
+++ b/src/components/VideoPlayer/index.module.scss
@@ -1,3 +1,4 @@
+$top-z-index : 10000;
 .video {
   position: relative;
 }
@@ -11,7 +12,7 @@
   line-height: 1.5;
   max-width: 75vw;
   text-shadow: 0 1px 2px rgba(255, 255, 255, 0.5);
-
+  z-index: $top-z-index;
   .author {
     font-weight: bold;
     line-height: 2;
@@ -27,6 +28,22 @@
 
     .tag {
       margin-left: 8px;
+    }
+  }
+  .danmu{
+    z-index: 9999;
+    width:90%;
+    margin:auto;
+    display: flex;
+    flex-direction: row;
+    margin-top: 15px;
+    input{
+      width: 80%;
+      margin-right: 15px;
+      color: grey;
+      height: 35px;
+      border-radius: 35px;
+      padding-left: 5px;
     }
   }
 }
