--- a/src/components/Vlivecomment/index.scss
+++ b/src/components/Vlivecomment/index.scss
@@ -3,12 +3,12 @@
   &-wrapper{
     position:absolute;
     left:5px;
-    bottom:5px;
     display: flex;
-    height: 30vh;
+    height: 10vh;
     width: 60vw;
     flex-direction: column;
     overflow: scroll; 
+    justify-content: flex-end;
     &::-webkit-scrollbar{
       display: none;
     }
@@ -27,8 +27,9 @@
     word-break: break-all;
     max-height: 50px;
     margin-bottom: 8px;
-    padding:3px 10px 5px 10px;
+    padding:1px 10px 2px 5px;
     border-radius: 15px;
+    font-size: 13px;
     }
     &-uname{
       font-weight: bold;
