--- a/src/components/VideoPlayer/index.module.scss
+++ b/src/components/VideoPlayer/index.module.scss
@@ -42,6 +42,7 @@ $top-z-index : 10000;
     display: flex;
     flex-direction: row;
     margin-top: 15px;
+    align-items: center;
     input{
       width: 80%;
       margin-right: 15px;
