feat: regi in ucenter is avaliable

--- a/src/components/Vlivecomment/index.scss
+++ b/src/components/Vlivecomment/index.scss
@@ -30,6 +30,7 @@
     padding:1px 10px 2px 5px;
     border-radius: 15px;
     font-size: 13px;
+    width: auto;
     }
     &-uname{
       font-weight: bold;
