--- a/src/components/VideoPlayer/index.module.scss
+++ b/src/components/VideoPlayer/index.module.scss
@@ -41,10 +41,10 @@ $top-z-index : 10000;
     margin:auto;
     display: flex;
     flex-direction: row;
-    margin-top: 15px;
+    margin-top: 2px;
     align-items: center;
     input{
-      width: 80%;
+      width: 95%;
       margin-right: 15px;
       color: grey;
       height: 35px;
@@ -66,7 +66,8 @@ $top-z-index : 10000;
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    filter: drop-shadow(0 0 3px #484848);
+    z-index: $top-z-index;
     &-icon {
       width: 40px;
       height: 40px;
@@ -91,3 +92,5 @@ $top-z-index : 10000;
     }
   }
 }
+
+//a hacking for css broken in player danmu switch button
