underGoing: workbox router

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,10 +13,10 @@ code {
     monospace;
 }
 
-a {
-  text-decoration: none;
-  color: rgba(255, 255, 255, 0.5);
-}
+// a {
+//   text-decoration: none;
+//   color: rgba(255, 255, 255, 0.5);
+// }
 .danmu-switch{
   display: flex;
   margin-right: 15px !important;
